# tuesday_ros2

./: README.md
clock_pose_issuer/: package.xml  setup.cfg  setup.py
clock_pose_issuer/clock_pose_issuer/: clock_publisher.py
gui_pose_issuer/: package.xml  setup.py
gui_pose_issuer/gui_pose_issuer/: gui_publisher.py
motion_controller/: package.xml  setup.py
motion_controller/launch/: full_stack.launch.py
motion_controller/motion_controller/: controller.py
